[gd_scene load_steps=38 format=3 uid="uid://8fdhxwi6j3gh"]

[ext_resource type="Texture2D" uid="uid://8mbbbeqtxyti" path="res://Sprites/SpritesUI/ShopBackground.png" id="1_ryky3"]
[ext_resource type="Script" path="res://ui_elements/shop.gd" id="1_ttsqo"]
[ext_resource type="Texture2D" uid="uid://upu3jtsni60s" path="res://Sprites/SpritesUI/Coin.png" id="2_q1q3b"]
[ext_resource type="Texture2D" uid="uid://c5bjx2hg5q5d2" path="res://Sprites/SpritesUI/StatBarProgress.png" id="3_ay61e"]
[ext_resource type="Texture2D" uid="uid://r6v4g81n208l" path="res://Sprites/SpritesUI/Feather.png" id="3_hsytu"]
[ext_resource type="Texture2D" uid="uid://ciggieoqahppb" path="res://Sprites/SpritesUI/FutureStatBarUnder.png" id="4_5emao"]
[ext_resource type="Script" path="res://ui_elements/damage_bar.gd" id="4_aw20l"]
[ext_resource type="Texture2D" uid="uid://bbryxnawahcx2" path="res://Sprites/SpritesUI/FutureStatBarPositive.png" id="4_b3phu"]
[ext_resource type="Texture2D" uid="uid://d38gjhpxxeovt" path="res://Sprites/SpritesUI/Quartz.png" id="4_eepa7"]
[ext_resource type="Texture2D" uid="uid://di8ak5uovfs0p" path="res://Sprites/SpritesUI/ButtonTextureNormal.png" id="5_85xex"]
[ext_resource type="Texture2D" uid="uid://dyd0effbhjl00" path="res://Sprites/SpritesUI/HeartIcon.png" id="6_p6vyc"]
[ext_resource type="Texture2D" uid="uid://dgntkmvdl1mgb" path="res://Sprites/SpritesUI/LargeButtonTextureNormal.png" id="7_343dp"]
[ext_resource type="Script" path="res://ui_elements/fire_rate_bar.gd" id="7_ds6mn"]
[ext_resource type="Script" path="res://ui_elements/shot_speed_bar.gd" id="8_fq4g3"]
[ext_resource type="Script" path="res://ui_elements/defense_bar.gd" id="9_401at"]
[ext_resource type="Script" path="res://ui_elements/speed_bar.gd" id="10_hdxr7"]
[ext_resource type="Script" path="res://ui_elements/luck_bar.gd" id="11_gb7j6"]

[sub_resource type="LabelSettings" id="LabelSettings_gxrj1"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_w4121"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_v2coh"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_eb7dt"]
font_size = 24

[sub_resource type="AtlasTexture" id="AtlasTexture_4b2s8"]
atlas = ExtResource("5_85xex")
region = Rect2(0, 0, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_76f5b"]
atlas = ExtResource("5_85xex")
region = Rect2(0, 30, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhecy"]
atlas = ExtResource("5_85xex")
region = Rect2(0, 60, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc0w0"]
atlas = ExtResource("5_85xex")
region = Rect2(0, 90, 60, 30)

[sub_resource type="LabelSettings" id="LabelSettings_gfpwp"]
font_size = 22

[sub_resource type="AtlasTexture" id="AtlasTexture_chthn"]
atlas = ExtResource("5_85xex")
region = Rect2(0, 0, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_8biqr"]
atlas = ExtResource("5_85xex")
region = Rect2(0, 30, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_flhmx"]
atlas = ExtResource("5_85xex")
region = Rect2(0, 60, 60, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvwxq"]
atlas = ExtResource("5_85xex")
region = Rect2(0, 90, 60, 30)

[sub_resource type="LabelSettings" id="LabelSettings_o4xlt"]

[sub_resource type="LabelSettings" id="LabelSettings_slg8p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_itfam"]
atlas = ExtResource("7_343dp")
region = Rect2(0, 0, 53, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pl8j"]
atlas = ExtResource("7_343dp")
region = Rect2(0, 53, 53, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4qbh"]
atlas = ExtResource("7_343dp")
region = Rect2(0, 106, 53, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_66kbt"]
atlas = ExtResource("7_343dp")
region = Rect2(0, 159, 53, 53)

[sub_resource type="LabelSettings" id="LabelSettings_l8d5c"]
line_spacing = 0.0
font_size = 18

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ttsqo")

[node name="ShopBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0004375
anchor_top = -0.000111135
anchor_right = 0.000437546
anchor_bottom = -0.000111135
offset_left = -0.28
offset_top = 0.0399997
offset_right = 639.72
offset_bottom = 360.04
texture = ExtResource("1_ryky3")
metadata/_edit_use_anchors_ = true

[node name="DamageLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.458126
anchor_top = 0.766222
anchor_right = 0.458126
anchor_bottom = 0.766222
offset_left = -0.200012
offset_top = 0.159973
offset_right = 39.8
offset_bottom = 14.16
text = "Damage"
label_settings = SubResource("LabelSettings_gxrj1")
metadata/_edit_use_anchors_ = true

[node name="FireRateLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.458126
anchor_top = 0.800444
anchor_right = 0.458126
anchor_bottom = 0.800444
offset_left = -0.200012
offset_top = -0.160034
offset_right = 42.8
offset_bottom = 13.84
text = "Fire Rate"
label_settings = SubResource("LabelSettings_w4121")
metadata/_edit_use_anchors_ = true

[node name="ShotSpeedLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.622125
anchor_top = 0.766222
anchor_right = 0.622125
anchor_bottom = 0.766222
offset_left = -0.160004
offset_top = 0.159973
offset_right = 53.84
offset_bottom = 14.16
text = "Shot Speed"
label_settings = SubResource("LabelSettings_v2coh")
metadata/_edit_use_anchors_ = true

[node name="DefenseLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.622125
anchor_top = 0.800444
anchor_right = 0.622125
anchor_bottom = 0.800444
offset_left = -0.160004
offset_top = -0.160034
offset_right = 39.84
offset_bottom = 13.84
text = "Defense"
label_settings = SubResource("LabelSettings_gxrj1")
metadata/_edit_use_anchors_ = true

[node name="SpeedLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.803125
anchor_top = 0.766222
anchor_right = 0.803125
anchor_bottom = 0.766222
offset_top = 0.159973
offset_right = 43.0
offset_bottom = 14.16
text = "Speed"
label_settings = SubResource("LabelSettings_w4121")
metadata/_edit_use_anchors_ = true

[node name="LuckLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.803125
anchor_top = 0.800444
anchor_right = 0.803125
anchor_bottom = 0.800444
offset_top = -0.160034
offset_right = 54.0
offset_bottom = 13.84
text = "Luck"
label_settings = SubResource("LabelSettings_v2coh")
metadata/_edit_use_anchors_ = true

[node name="DamageBar" type="TextureProgressBar" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.526
anchor_top = 0.78
anchor_right = 0.527
anchor_bottom = 0.781
offset_left = 0.359985
offset_top = 0.19989
offset_right = 58.72
offset_bottom = 5.8399
max_value = 10.0
value = 5.0
nine_patch_stretch = true
texture_progress = ExtResource("3_ay61e")
script = ExtResource("4_aw20l")

[node name="FutureProgressBar" type="TextureProgressBar" parent="DamageBar"]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.0169492
offset_right = 59.0
offset_bottom = 6.0
max_value = 10.0
value = 7.0
nine_patch_stretch = true
texture_under = ExtResource("4_5emao")
texture_progress = ExtResource("4_b3phu")
metadata/_edit_use_anchors_ = true

[node name="FireRateBar" type="TextureProgressBar" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.526125
anchor_top = 0.814222
anchor_right = 0.526125
anchor_bottom = 0.814222
offset_left = 0.279999
offset_top = -0.120026
offset_right = 60.28
offset_bottom = 5.87997
max_value = 10.0
value = 3.0
nine_patch_stretch = true
texture_progress = ExtResource("3_ay61e")
script = ExtResource("7_ds6mn")
metadata/_edit_use_anchors_ = true

[node name="FutureProgressBar" type="TextureProgressBar" parent="FireRateBar"]
z_index = -1
layout_mode = 0
offset_right = 60.0
offset_bottom = 6.0
max_value = 10.0
value = 5.0
nine_patch_stretch = true
texture_under = ExtResource("4_5emao")
texture_progress = ExtResource("4_b3phu")

[node name="ShotSpeedBar" type="TextureProgressBar" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.708125
anchor_top = 0.780222
anchor_right = 0.708125
anchor_bottom = 0.780222
offset_left = -0.200012
offset_top = 0.119995
offset_right = 59.8
offset_bottom = 6.12
max_value = 10.0
value = 4.0
nine_patch_stretch = true
texture_progress = ExtResource("3_ay61e")
script = ExtResource("8_fq4g3")
metadata/_edit_use_anchors_ = true

[node name="FutureProgressBar" type="TextureProgressBar" parent="ShotSpeedBar"]
z_index = -1
layout_mode = 0
offset_right = 60.0
offset_bottom = 6.0
max_value = 10.0
value = 6.0
nine_patch_stretch = true
texture_under = ExtResource("4_5emao")
texture_progress = ExtResource("4_b3phu")

[node name="DefenseBar" type="TextureProgressBar" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.708125
anchor_top = 0.813444
anchor_right = 0.708125
anchor_bottom = 0.813444
offset_left = -0.200012
offset_top = 0.159973
offset_right = 59.8
offset_bottom = 6.15997
max_value = 10.0
value = 6.0
nine_patch_stretch = true
texture_progress = ExtResource("3_ay61e")
script = ExtResource("9_401at")
metadata/_edit_use_anchors_ = true

[node name="FutureProgressBar" type="TextureProgressBar" parent="DefenseBar"]
z_index = -1
layout_mode = 0
offset_right = 60.0
offset_bottom = 6.0
max_value = 10.0
value = 8.0
nine_patch_stretch = true
texture_under = ExtResource("4_5emao")
texture_progress = ExtResource("4_b3phu")

[node name="SpeedBar" type="TextureProgressBar" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.850125
anchor_top = 0.781
anchor_right = 0.850125
anchor_bottom = 0.781
offset_left = -0.0800171
offset_top = -0.160004
offset_right = 59.92
offset_bottom = 5.84
max_value = 10.0
value = 3.0
nine_patch_stretch = true
texture_progress = ExtResource("3_ay61e")
script = ExtResource("10_hdxr7")
metadata/_edit_use_anchors_ = true

[node name="FutureProgressBar" type="TextureProgressBar" parent="SpeedBar"]
z_index = -1
layout_mode = 0
offset_right = 60.0
offset_bottom = 6.0
max_value = 10.0
value = 5.0
nine_patch_stretch = true
texture_under = ExtResource("4_5emao")
texture_progress = ExtResource("4_b3phu")

[node name="LuckBar" type="TextureProgressBar" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.850125
anchor_top = 0.813444
anchor_right = 0.850125
anchor_bottom = 0.813444
offset_left = -0.0800171
offset_top = 0.159973
offset_right = 59.92
offset_bottom = 6.15997
max_value = 10.0
value = 7.0
nine_patch_stretch = true
texture_progress = ExtResource("3_ay61e")
script = ExtResource("11_gb7j6")
metadata/_edit_use_anchors_ = true

[node name="FutureProgressBar" type="TextureProgressBar" parent="LuckBar"]
z_index = -1
layout_mode = 0
offset_right = 60.0
offset_bottom = 6.0
max_value = 10.0
value = 9.0
nine_patch_stretch = true
texture_under = ExtResource("4_5emao")
texture_progress = ExtResource("4_b3phu")

[node name="PriceLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.492438
anchor_top = 0.830333
anchor_right = 0.492438
anchor_bottom = 0.830333
offset_left = -0.160004
offset_top = 0.0799866
offset_right = 63.84
offset_bottom = 34.08
text = "Price:"
label_settings = SubResource("LabelSettings_eb7dt")
metadata/_edit_use_anchors_ = true

[node name="CoinIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.600062
anchor_top = 0.858222
anchor_right = 0.600062
anchor_bottom = 0.858222
offset_left = -0.0400085
offset_top = 0.039978
offset_right = 15.96
offset_bottom = 16.04
texture = ExtResource("2_q1q3b")
metadata/_edit_use_anchors_ = true

[node name="FeatherIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6745
anchor_top = 0.858444
anchor_right = 0.6745
anchor_bottom = 0.858444
offset_left = 0.319946
offset_top = -0.0400085
offset_right = 16.3199
offset_bottom = 15.96
texture = ExtResource("3_hsytu")
metadata/_edit_use_anchors_ = true

[node name="QuartzIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.745625
anchor_top = 0.858222
anchor_right = 0.745625
anchor_bottom = 0.858444
offset_left = -0.200012
offset_top = 0.039978
offset_right = 15.8
offset_bottom = 15.96
texture = ExtResource("4_eepa7")
metadata/_edit_use_anchors_ = true

[node name="BuyItemButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.856
anchor_top = 0.839
anchor_right = 0.856
anchor_bottom = 0.839
offset_left = 0.159973
offset_top = -0.0398865
offset_right = 60.16
offset_bottom = 29.9601
texture_normal = SubResource("AtlasTexture_4b2s8")
texture_pressed = SubResource("AtlasTexture_76f5b")
texture_hover = SubResource("AtlasTexture_fhecy")
texture_disabled = SubResource("AtlasTexture_bc0w0")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="BuyLabel" type="Label" parent="BuyItemButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.149667
anchor_top = -0.100004
anchor_right = 0.149667
anchor_bottom = -0.100004
offset_left = 0.02
offset_right = 44.02
offset_bottom = 34.0002
text = "Buy"
label_settings = SubResource("LabelSettings_gfpwp")
metadata/_edit_use_anchors_ = true

[node name="BuyHealthButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.305954
anchor_top = 0.839
anchor_right = 0.306
anchor_bottom = 0.839
offset_left = 0.189667
offset_top = -0.0400085
offset_right = 60.16
offset_bottom = 29.96
texture_normal = SubResource("AtlasTexture_chthn")
texture_pressed = SubResource("AtlasTexture_8biqr")
texture_hover = SubResource("AtlasTexture_flhmx")
texture_disabled = SubResource("AtlasTexture_pvwxq")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="BuyLabel" type="Label" parent="BuyHealthButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.149667
anchor_top = -0.0999999
anchor_right = 0.149667
anchor_bottom = -0.0999999
offset_left = 0.02
offset_right = 44.02
offset_bottom = 34.0002
text = "Buy"
label_settings = SubResource("LabelSettings_gfpwp")
metadata/_edit_use_anchors_ = true

[node name="BuyHealthLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 191.0
offset_top = 279.0
offset_right = 214.0
offset_bottom = 302.0
text = "for"
label_settings = SubResource("LabelSettings_o4xlt")

[node name="CoinIcon2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.339438
anchor_top = 0.780222
anchor_right = 0.339438
anchor_bottom = 0.780222
offset_left = -0.240021
offset_top = 0.119995
offset_right = 15.76
offset_bottom = 16.12
texture = ExtResource("2_q1q3b")
metadata/_edit_use_anchors_ = true

[node name="CoinAmmountForHealth" type="Label" parent="."]
layout_mode = 0
offset_left = 235.0
offset_top = 279.0
offset_right = 254.0
offset_bottom = 302.0
text = "50"
label_settings = SubResource("LabelSettings_slg8p")

[node name="HealthAmmount" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.239437
anchor_top = 0.775
anchor_right = 0.239437
anchor_bottom = 0.775
offset_left = -0.240005
offset_right = 18.76
offset_bottom = 23.0
text = "15
"
metadata/_edit_use_anchors_ = true

[node name="HeartIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.269813
anchor_top = 0.780667
anchor_right = 0.269813
anchor_bottom = 0.780667
offset_left = 0.319992
offset_top = -0.0400085
offset_right = 16.32
offset_bottom = 15.96
texture = ExtResource("6_p6vyc")
metadata/_edit_use_anchors_ = true

[node name="CoinAmmountForItem" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6285
anchor_top = 0.853
anchor_right = 0.6285
anchor_bottom = 0.853
offset_left = -0.240021
offset_top = -0.0800171
offset_right = 27.76
offset_bottom = 22.92
text = "120"
metadata/_edit_use_anchors_ = true

[node name="FeatherAmmountForItem" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.701063
anchor_top = 0.853
anchor_right = 0.701063
anchor_bottom = 0.853
offset_left = 0.320007
offset_top = -0.0800171
offset_right = 19.32
offset_bottom = 22.92
text = "563"
metadata/_edit_use_anchors_ = true

[node name="QuartzAmmountForItem" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.77025
anchor_top = 0.852667
anchor_right = 0.798375
anchor_bottom = 0.852667
offset_left = 0.039978
offset_top = 0.039978
offset_right = 10.04
offset_bottom = 23.04
text = "123"
metadata/_edit_use_anchors_ = true

[node name="ExitShopButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.775
anchor_right = 0.05
anchor_bottom = 0.775
offset_right = 53.0
offset_bottom = 53.0
texture_normal = SubResource("AtlasTexture_itfam")
texture_pressed = SubResource("AtlasTexture_7pl8j")
texture_hover = SubResource("AtlasTexture_q4qbh")
texture_disabled = SubResource("AtlasTexture_66kbt")
metadata/_edit_use_anchors_ = true

[node name="ExitShopLabel" type="Label" parent="ExitShopButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0503333
anchor_top = -0.0166667
anchor_right = 0.0503333
anchor_bottom = -0.0163333
offset_left = -0.0200005
offset_right = 48.98
offset_bottom = 55.98
text = "Exit
Shop"
label_settings = SubResource("LabelSettings_l8d5c")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TomeMarker0" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(290.654, 251.712)

[node name="TomeMarker1" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(398.456, 251.576)

[node name="TomeMarker2" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(504.655, 250.814)
